Changed layout of list from two to three lines; list is built asynchronously; loss of internet connection no longer crashes app

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,6 +10,9 @@
     <string name="settings_activity">Settings</string>
     <string name="articles_text">Articles</string>
     <string name="resources_text">Resources</string>
+    <string name="no_internet_text">Could not connect to Resilience.org. Is your device connected to the internet?</string>
+    <string name="ok">OK</string>
+    <string name="connection_settings">Connection settings</string>
     
 
 </resources>
